--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "acorn": "^8.4.1",
     "browserify": "^17.0.0",
     "budo": "^11.6.4",
+    "build-app": "^0.8.3",
     "gsap": "^3.7.1",
     "npm": "^7.20.5",
     "serve": "^12.0.0",
     "start": "^5.1.0",
-    "three": "^0.131.3"
+    "three": "^0.131.3",
+    "webpack": "^5.49.0",
+    "webpack-cli": "^4.7.2"
   }
 }
